# MachineLearingCpp

./: .gitignore  CMakeLists.txt  ReadCsv.cpp  ReadCsv.h  main.cpp  read_csv.cpp
Python/: csv_plotter.py
app/: main.cpp
include/: LinearRegression.hpp  ReadCSV.h
src/: CMakeLists.txt
src/LinearRegression/: LinearRegression.cpp  LinearRegression.hpp
src/ReadCSV/: ReadCSV.cpp  ReadCSV.h
